v1.1.1
======

- Fix problem processing images where path to image file wouldn't be prefixed to the filename when the file is not found in the JSIO resources file
- Added quotes around background image URLs when we can't use a data URL incase the URL contains special characters.

v1.1.0
======

- Exposed "process" function to allow new image elements and style rules with JSIO URLs to be processed
- "process" function optionally takes a jsio resources object parameter
- Use HTML5 "data-res-url" attribute instead of querystring to specify jsio resources file URL
- If no resources URL is specified, don't process jsio URLs - assume the user is going to manually call "process"
- General preformance tweaks
- Moved to grunt for build and test

v1.0.0
======

- Added IE < 8 optimisation (IE < 8 does not download the jsio-resources.js)
- Opimisations for minified (but not gzipped) script
- Fixed problem with getQueryString function that wouldn't return a default value if query string key present but not value  

v1.0.0 Beta
===========

- Refactored code into two "processing" functions - one for CSS background-images and one for image elements
- Added IE detection script (thanks to https://gist.github.com/527683)
- Fixed CSS background image processing function (now works in IE)
- Added rules for IE < 8 to remove placeholder and expose fallback image for all images and background-images
- Added rules for IE 8 to remove placeholder and expose fallback image when data uri exceeds 32KB
- Improved regular expressions that look for jsio placeholder gif for both processing functions
- Added fix that makes IE < 9 fire callback function when jsio resources file finishes loading

v1.0.0 Alpha
============

- Tout le monde