@@ -3,6 +3,7 @@ v1.1.1
 
 - Fix problem processing images where path to image file wouldn't be prefixed to the filename when the file is not found in the JSIO resources file
 - Added quotes around background image URLs when we can't use a data URL incase the URL contains special characters.
+- Added parameter to process function that allows the callee to control whether the 404 fallback occurs or not
 
 v1.1.0
 ======
